@@ -86,7 +86,6 @@ BEGIN_EVENT_TABLE(frmQuery, pgFrame)
     EVT_MENU(MNU_EXECUTE,           frmQuery::OnExecute)
     EVT_MENU(MNU_EXECFILE,          frmQuery::OnExecFile)
     EVT_MENU(MNU_EXPLAIN,           frmQuery::OnExplain)
-    EVT_MENU(MNU_EXPLAINTEXT,       frmQuery::OnExplainText)
     EVT_MENU(MNU_CANCEL,            frmQuery::OnCancel)
     EVT_MENU(MNU_CONTENTS,          frmQuery::OnContents)
     EVT_MENU(MNU_HELP,              frmQuery::OnHelp)
@@ -186,7 +185,6 @@ frmQuery::frmQuery(frmMain *form, const wxString& _title, pgConn *_conn, const w
     queryMenu->Append(MNU_EXECUTE, _("&Execute\tF5"), _("Execute query"));
     queryMenu->Append(MNU_EXECFILE, _("Execute to file"), _("Execute query, write result to file"));
     queryMenu->Append(MNU_EXPLAIN, _("E&xplain\tF7"), _("Explain query"));
-    queryMenu->Append(MNU_EXPLAINTEXT, _("Explain text"), _("Use current text Explain result and display it graphically"));
 
     wxMenu *eo=new wxMenu();
     eo->Append(MNU_VERBOSE, _("Verbose"), _("Explain verbose query"), wxITEM_CHECK);
@@ -1533,20 +1531,6 @@ void frmQuery::OnExplain(wxCommandEvent& event)
     }
 
     execQuery(sql, resultToRetrieve, true, offset, false, true, verbose);
-}
-
-void frmQuery::OnExplainText(wxCommandEvent& event)
-{
-    wxString str=sqlQuery->GetSelectedText();
-    if (str.IsNull())
-        str = sqlQuery->GetText();
-
-    if (str.IsNull())
-        return;
-
-    explainCanvas->SetExplainString(str);
-    outputPane->SetSelection(1);
-    sqlQuery->SetFocus();
 }
 
 void frmQuery::OnExecute(wxCommandEvent& event)
