@@ -57,7 +57,6 @@ enum
     MNU_EXECFILE,
     MNU_EXPLAIN,
     MNU_EXPLAINOPTIONS,
-    MNU_EXPLAINTEXT,
     MNU_VERBOSE,
     MNU_ANALYZE,
     MNU_CLEARHISTORY,
