@@ -36,6 +36,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2008-03-04 DP  1.8.3  Remove long-dead Explain Text option from the Query Tool.
 2008-02-27 DP  1.8.3  Properly quote synonym names when refreshing.
 2008-02-26 DP  1.8.3  Parse function parameter names correctly when they
                       contain commas.
